# narccissus

./: .gitignore  CMakeLists.txt  fields.cpp  graph.cpp  main.cpp
data/: polarization_circle.fig  stevens.osm
include/: Face.hpp  Mesh.hpp  Nrcc.hpp  Path.hpp  Ray.hpp  Util.hpp  Vec3.hpp  Vector.hpp  Wave.hpp
src/: Dipole.hpp  Face.hpp  Mesh.hpp  Nrcc.hpp  Path.hpp  Pole.hpp  Util.hpp  Vec3.hpp  Wave.hpp  grahics.cpp  main.cpp
tests/: calculated_fields_test_0.fig  calculated_fields_test_1.fig  emField.cpp  emField.m  emWave.cpp  emWave.m  em_field_circle.fig  polarization_linear.fig  test_array.cpp  test_donut.cpp  test_field.cpp  test_graph.cpp  test_main.cpp  test_refrx.cpp  test_trace.cpp  test_wave2.cpp  test_waves.cpp
tools/: array.m  donut.m  field.m  reflects.m  wave.m  wave2.m  waves.m
